--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 .App {
   text-align: center;
 }
+
+.App-header {
+  padding: 10px;
+  font-size: 36px;
+}
+
+input {
+  margin: 5px;
+  padding: 5px;
+}
+
+button {
+  padding: 5px;
+}
+
+div {
+  padding: 7px;
+}
